# umap-clustering

./: .gitignore  LICENSE  README.md  datasets_description.tex  knn.py  requirements.txt  test_knn.ipynb  umap_library_integration.ipynb
data_exploration/: country_exploration.ipynb
test/: test_knn.ipynb  umap_library_integration.ipynb
umap_algo/: knn.py  main.py  nn_descent.py  umap_adj_matrix.py  umap_class.py
umap_comparisons/: comp_perf.py  dowstream_clustering.py  intrinsic_measures.py  pyproject.toml  test_custom_umap_forest.py  visuals.py
umap_comparisons/images/: downstream_clustering_results_5000.txt  intrinsic_measures_results_1000.txt  intrinsic_measures_results_10000.txt  intrinsic_measures_results_3000.txt
